--- a/assets_new/sass/_header.scss
+++ b/assets_new/sass/_header.scss
@@ -26,6 +26,10 @@ header {
     display: flex;
     align-items: center;
 
+    &.main-header {
+      display: block;
+    }
+
     &::after {
       @include clear;
     }
@@ -47,6 +51,7 @@ header {
         }
 
         >* {
+          margin: 0;
           display: inline-block;
           vertical-align: middle;
           cursor: pointer;
